--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="header-section fixed-positon">
       <div class="logo-header">
-        <img src="logo.jpg" alt="logo" width="30" />
+        <img src="assets/image/logo.jpg" alt="logo" width="30" />
       </div>
       <div class="nav-header" style="margin: 5px 50px">
         <a href="#description">DESKRIPSI</a>
@@ -25,7 +25,7 @@
         <div></div>
       </div>
       <div class="avatar-headline">
-        <img src="logo.jpg" alt="Avatar" />
+        <img src="assets/image/logo.jpg" alt="Avatar" />
       </div>
     </div>
     <div id="description" class="description-section">
@@ -87,7 +87,7 @@
         </ol>
       </div>
     </div>
-    <div id="contact" class="contact-section">
+    <!-- <div id="contact" class="contact-section">
       <div class="title">
         <h2>HUBUNGI SAYA</h2>
         <div class="line"></div>
@@ -101,6 +101,44 @@
           <textarea placeholder="pesan"></textarea>
         </div>
         <button>KIRIM</button>
+      </div>
+    </div> -->
+
+    <!-- mentor simulation Week 10 SWE -->
+    <div id="contact" class="contact-form">
+      <div class="title-form">
+        <h2>Formulir Contact</h2>
+        <div class="line"></div>
+      </div>
+      <div class="form-box">
+        <!-- explanation text section  -->
+        <div class="text-form">
+          <p>
+            Please fill out the form below and we"ll get back to you shortly
+          </p>
+        </div>
+        <div class="name-title">
+          <h4>Nama Belakang</h4>
+          <h4>Nama Depan</h4>
+        </div>
+        <div class="name-box">
+          <div class="form-input">
+            <input type="text" placeholder="Masukan Nama Depan" />
+          </div>
+          <div class="form-input">
+            <input type="text" placeholder="Masukan Nama Akhir" />
+          </div>
+        </div>
+
+        <h4>Email</h4>
+        <div class="form-input">
+          <input type="email" placeholder="Masukan email anda" />
+        </div>
+        <h4>Pesan</h4>
+        <div class="form-input">
+          <textarea placeholder="silahkan pesan anda"></textarea>
+        </div>
+        <button>Kirim Pesan</button>
       </div>
     </div>
   </body>
